fix: services gap

--- a/src/styles/service.scss
+++ b/src/styles/service.scss
@@ -305,7 +305,7 @@
 
     @media screen and (min-width: $tablet) {
       display: flex;
-      gap    : 22px;
+      gap    : 15px;
     }
 
     button {
